deployment/ingress/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cache-enable: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2$3
spec:
  rules:
    - host: csi.cmkl.ac.th 
      http:
        paths:
          - path: /express(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: express
                port:
                  number: 3000
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
